# support-bots

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  requirements.txt
bot/src/: main.py
bot/src/bot_app/: 12.sql  app.py  bd.py  commands.py  test.py  themes.db  themes.db-journal  themes.sqbpro
bot/src/bot_app/locale/: messages.pot
bot/src/bot_app/locale/en/LC_MESSAGES/: messages.mo  messages.po
bot/src/bot_app/locale/uk/LC_MESSAGES/: messages.mo  messages.po
bot_telegram/: Dockerfile  main.py  pyproject.toml  utitlits.py
bot_telegram/Bot_help/: bd.py
bot_telegram/bot_app/: __init__.py  app.py  commands.py  test
bot_telegram/bot_app/handlers/: contact_handler.py  email_handler.py  help_handler.py  language_handler.py  menu_handler.py  news_handler.py  offers_handler.py  settings_handler.py  start_handler.py  support_handler.py  utils.py
bot_telegram/bot_app/locale/en/LC_MESSAGES/: messages.po
bot_telegram/bot_app/locale/ru/LC_MESSAGES/: messages.po
bot_telegram/bot_app/locale/uk/LC_MESSAGES/: messages.po
bot_telegram/bot_app/settings/: configs.py  locale.py
configs/: configs.env
projectname/: celerybeat-schedule.dir
projectname/meets/: admin.py  models.py  tasks.py  views.py
projectname/meets/migrations/: 0003_remove_client_is_admin_remove_client_last_login_and_more.py  0004_remove_theme_description.py
projectname/proj/: celery.py  settings.py  wsgi.py
requirements/: lint.txt
