[tool.poetry]
name = "bot-telegram"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bot_telegram"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "2.25.1"
aiohttp = "3.8.5"
async-timeout = "4.0.2"
attrs = "23.1.0"
billiard = "4.1.0"
celery = "5.3.1"
Django = "4.2.3"
django-celery-results = "2.5.1"
djangorestframework = "3.14.0"
mysqlclient = "2.2.0"
pyTelegramBotAPI = "4.12.0"
redis = "4.6.0"
email-validator = "*"
requests = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
