[tool.poetry]
name = "bot-telegram"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bot_telegram"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "2.25.1"
aiohttp = "3.8.5"
async-timeout = "4.0.2"
attrs = "23.1.0"
billiard = "4.1.0"
celery = "5.3.1"
Django = "4.2.3"
django-celery-results = "2.5.1"
djangorestframework = "3.14.0"
mysqlclient = "2.2.0"
pyTelegramBotAPI = "4.12.0"
redis = "4.6.0"
email-validator = "*"
requests = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true

[tool.coverage.run]
branch = true
source = ["checklists", "tests"]
omit = ["site-packages"]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = false
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "*"
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*/migrations/*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytz.*"
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "C90",
]
unfixable = ["ALL"]
ignore = [
    "E203",
]
line-length = 88
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "venv",
    "tests",
]

[tool.ruff.per-file-ignores]
"*__init__.py" = ["F401"]
"*/migrations/*" = ["E501"]